# avro-idl

./: .gitignore  Cargo.toml  README.md
examples/: protocol.avdl  simple.avdl
examples/child/: ts.avdl
src/: ast.rs  error.rs  lexer.rs  lib.rs  linker.rs  main.rs  runner.rs  serializer.rs
