[package]
name = "avro-idl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A package for parsing Avro IDL"
readme = "README.md"

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = {version="1.0.132", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true